mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>MON CV</title>
 </head>
 <body>
-    
+
+    <section id="description">
+    <p>Passionné par le développement web, je cherche à développer mes compétences et acquerir beaucoup de connaissances</p>
+</section>
+
    <footer>
 
    </footer> 
