mise en place de la section formation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>MON CV</title>
 </head>
 <body>
-    
+   <section id="formations">
+    <h3>Formations</h3>
+    <ul>
+        <li>2024 — Acquisition d'une formation en maintenace</li>
+        <li>2023 — Baccalauréat</li>
+    </ul>
+</section>
+ 
    <footer>
 
    </footer> 
