mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     
+    <section id="competences">
+    <h3>Compétences</h3>
+    <ul>
+        <li>HTML / CSS</li>
+        <li>Git / GitHub</li>
+        <li>JavaScript</li>
+        <li>ExpressJs</li>
+    </ul>
+</section>
+
    <footer>
 
    </footer> 
