mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>MON CV</title>
 </head>
 <body>
-    
+   
+    <section id="associations">
+    <h3>Associations</h3>
+    <p>Membre de l’association Jeunes Développeurs</p>
+    <p>Membre de l’association Jeunes otakus et visionnaire</p>
+</section>
+
    <footer>
 
    </footer> 
