--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <h2>Développeur Web Junior</h2>
 
     
+
+    <section id="description">
+    <p>Passionné par le développement web, je cherche à développer mes compétences et acquerir beaucoup de connaissances</p>
+</section>
+
    <footer>
 
    </footer> 
